<resources>
    <string name="app_name">EventLite</string>
    <string name="title_activity_event_locator">EventLite Prototype</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Profile Values-->


    <!--EVENT Details Attribute Headers-->
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="host">Host</string>
    <string name="rating">Rating</string>
    <string name="attendants">Attendants</string>
    <string name="details">Description</string>
    <string name="photos">Photos</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to sign up-->
    <string name="invitation_title">EventLite Invitation</string>
    <string name="invitation_message">Check out this cool new app!</string>
    <string name="invitation_cta">Continue</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_display_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="label_host_rating">Host \nRating</string>
    <string name="label_location">Location</string>
    <string name="label_email">Email</string>
    <string name="label_phone_number">Phone #</string>
    <string name="label_interests">Interests</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_switch_sign_in">Don\'t Have an Account?</string>
    <string name="action_switch_register">Already Have an Account?</string>
    <string name="register_or_sign_in">Log In or Sign Up With Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">Please enter a valid name</string>
    <string name="error_non_matching_passwords">The passwords do not match</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="password_requirements">Password needs to be at least 8 characters and contain at least one number.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="terms_and_conditions">By tapping Continue, Register, or Logging in, you agree to
        the EventLite Terms of Service and Privacy Policy.
    </string>
    <string name="slogan">Carpe Diem</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Library Keys-->
    <string name="facebook_app_id">145596176025235</string>
    <string name="fb_login_protocol_scheme">fb145596176025235</string>

</resources>
