<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.evaquint.android.modules.EventCard">

    <TextView
        android:id="@+id/event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="Event Title" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/event_title"
        android:layout_marginStart="27dp"
        android:layout_marginTop="24dp"
        android:text="@string/location" />

    <TextView
        android:id="@+id/location_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView13"
        android:layout_toEndOf="@+id/textView13" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_below="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />

    <TextView
        android:id="@+id/date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_toEndOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_alignBaseline="@+id/date_value"
        android:layout_alignBottom="@+id/date_value"
        android:layout_alignEnd="@+id/event_title" />

    <TextView
        android:id="@+id/time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView15"
        android:layout_toEndOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView14"
        android:layout_below="@+id/textView14"
        android:layout_marginTop="39dp"
        android:text="@string/host" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar2"
        android:layout_alignStart="@+id/textView15"
        android:layout_marginStart="14dp"
        android:text="@string/rating" />

    <RatingBar
        android:id="@+id/ratingBar2"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView17"
        android:layout_alignStart="@+id/textView15" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView16"
        android:layout_below="@+id/textView16"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_below="@+id/textView17"
        android:layout_marginTop="32dp"
        android:text="@string/attendants" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView22"
        android:layout_below="@+id/textView22"
        android:layout_marginTop="21dp"
        android:text="@string/details" />
</android.support.percent.PercentRelativeLayout>
