<com.evaquint.evaquint.modules.FittedView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="com.evaquint.evaquint.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent
"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <com.evaquint.evaquint.modules.FittedView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/sym_def_app_icon"
            android:id="@+id/imageView3"
            android:layout_marginTop="113dp"
            android:layout_below="@+id/login_progress"
            android:layout_alignStart="@+id/email" />

        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:layout_above="@+id/register_button"
            android:layout_toEndOf="@+id/login_progress" />

        <Button
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:textStyle="bold"
            android:layout_marginBottom="63dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/login_progress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_below="@+id/email"
            android:layout_toEndOf="@+id/login_progress"
            android:layout_marginTop="11dp" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_below="@+id/imageView3"
            android:layout_toEndOf="@+id/login_progress"
            android:layout_marginTop="53dp" />
    </com.evaquint.evaquint.modules.FittedView>

</com.evaquint.evaquint.modules.FittedView>
