<?xml version="1.0" encoding="utf-8"?>
<com.evaquint.evaquint.modules.FittedView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_adjust_black_24dp"
        android:layout_marginTop="82dp"
        android:id="@+id/imageView3"
        android:layout_below="@+id/textInputLayout"
        android:layout_alignStart="@+id/textInputLayout" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView3"
        android:layout_marginBottom="181dp" />

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password"
        android:layout_alignTop="@+id/password"
        android:layout_marginTop="58dp"
        android:text="@string/action_sign_in"
        android:textStyle="bold" />

    <Button
        android:id="@+id/register_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        android:layout_below="@+id/email_sign_in_button"
        android:layout_alignStart="@+id/email_sign_in_button" />

</com.evaquint.evaquint.modules.FittedView>