<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="com.evaquint.android.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/black">
        <!--<ImageView-->
        <!--app:layout_widthPercent="30%"-->
        <!--app:layout_heightPercent="20%"-->
        <!--android:src="@mipmap/ic_launcher"-->
        <!--android:id="@+id/imageView3"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentStart="true" />-->

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_facebook"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="133dp"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/golden_yellow"
            android:textSize="40dp"
            android:textStyle="bold" />

        <in.championswimmer.libsocialbuttons.buttons.BtnGoogleplus
            android:id="@+id/login_google"
            style="@style/SocialButton"
            android:layout_above="@+id/login_facebook"
            android:layout_alignParentEnd="true"
            android:text="Continue With Google"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_marginTopPercent="16%" />

        <in.championswimmer.libsocialbuttons.buttons.BtnFacebook
            android:id="@+id/login_facebook"
            style="@style/SocialButton"
            android:layout_above="@+id/more_options_btn"
            android:layout_centerHorizontal="true"
            android:text="Continue With Facebook"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/more_options_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/terms_and_conditions"
            android:layout_marginBottom="13dp"
            android:layout_toStartOf="@+id/to_login"
            android:text="More Options"
            android:textColor="@android:color/white"
            app:layout_marginLeftPercent="8%"
            app:layout_marginTopPercent="1%" />

        <TextView
            android:id="@+id/to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/more_options_btn"
            android:layout_alignBottom="@+id/more_options_btn"
            android:layout_alignEnd="@+id/login_facebook"
            android:layout_marginEnd="22dp"
            android:text="@string/register_or_sign_in"
            android:textColor="@android:color/white"
            app:layout_marginLeftPercent="8%"
            app:layout_marginTopPercent="2%" />

        <!--<TextView-->
        <!--android:id="@+id/to_register"-->
        <!--app:layout_marginLeftPercent="6%"-->
        <!--app:layout_marginTopPercent="2%"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_below="@+id/login_facebook"-->
        <!--android:layout_toEndOf="@id/to_login"-->
        <!--android:text="Sign Up With Email" />-->

        <TextView
            android:id="@+id/terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="13dp"
            android:padding="10dp"
            android:text="@string/terms_and_conditions"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            app:layout_marginBottomPercent="2%" />


    </android.support.percent.PercentRelativeLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="350px"
        android:layout_height="350px"
        android:layout_marginTop="33dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_below="@+id/login_progress"
        android:layout_centerHorizontal="true" />


</android.support.percent.PercentRelativeLayout>
